	PR rtl-optimization/59166 	* ira.c (find_moveable_pseudos): Use DF_REF_REAL_LOC instead of 	DF_REF_LOC in validate_change call. 	(split_live_ranges_for_shrink_wrap): Likewise.

* gcc.dg/torture/pr59166.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@205413 138bc75d-0d04-0410-961f-82ee72b054a4